version/0.4/_sources/api/_autosummary/ansys.meshing.prime.ErrorCode.rst.txt
.. vale off

ErrorCode
=========

.. currentmodule:: ansys.meshing.prime

.. autoclass:: ErrorCode
   
   
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
      :toctree:
   
      ErrorCode.NOERROR
      ErrorCode.UNKNOWN
      ErrorCode.SIGSEGV
      ErrorCode.SURFERFAILED
      ErrorCode.TOPOFACESREMESHFAILED
      ErrorCode.TOPOEDGESREMESHFAILED
      ErrorCode.SURFERLAYEREDQUADFAILED
      ErrorCode.SURFERINVALIDINPUT
      ErrorCode.SURFERQUADFAILED
      ErrorCode.FACEZONELETSFEATURESNOTUPTODATE
      ErrorCode.SURFERAUTOSIZEQUADUNSUPPORTED
      ErrorCode.SURFERAUTOSIZEMUSTBEVOLUMETRIC
      ErrorCode.SURFERNONMANIFOLDEDGE
      ErrorCode.FREEZEMESHERROR
      ErrorCode.SURFERINVALIDCONSTANTSIZE
      ErrorCode.SURFERINVALIDMINORMAXSIZES
      ErrorCode.SURFERINVALIDANGLES
      ErrorCode.SMOOTHSIZETRANSITIONNOTSUPPORTEDFORTOPO
      ErrorCode.LOCALSURFERINVALIDNUMRINGS
      ErrorCode.SURFERCANNOTREMESHPERIODICZONELETS
      ErrorCode.SUBTRACTVOLUMEFAILED
      ErrorCode.INTERSECTIONINTARGETVOLUMES
      ErrorCode.INTERSECTIONINCUTTERVOLUMES
      ErrorCode.SCAFFOLDERBADINPUTEMPTYTOPO
      ErrorCode.SCAFFOLDERBADINPUTNOFREEFACES
      ErrorCode.SCAFFOLDERBADINPUTPARAMS
      ErrorCode.SCAFFOLDERINVALIDABSOLUTEDISTOL
      ErrorCode.SCAFFOLDERINVALIDCONSTANTMESHSIZE
      ErrorCode.AUTOMESHFAILED
      ErrorCode.AITOVERLAPALONGMULTIFOUND
      ErrorCode.TRIANGULATIONFAILED
      ErrorCode.DUPLICATENODESFOUND
      ErrorCode.EDGEINTERSECTINGFACEFOUND
      ErrorCode.DUPLICATEFACESFOUND
      ErrorCode.TETIMPROVEFAILED
      ErrorCode.AUTONODEMOVEFAILED
      ErrorCode.ALREADYVOLUMEMESHED
      ErrorCode.INVALIDPRISMCONTROLS
      ErrorCode.VOLUMESNOTUPTODATE
      ErrorCode.QUADRATICMESHSUPPORTEDONLYFORTETS
      ErrorCode.NOACTIVESFFOUND
      ErrorCode.AUTOMESHINVALIDMAXSIZE
      ErrorCode.AUTOMESHHEXCOREFAILED
      ErrorCode.INVALIDVOLUMECONTROLS
      ErrorCode.SOURCEFACINGCELLZONELETS
      ErrorCode.TARGETWITHCELLZONELETS
      ErrorCode.SIDEZONELETSNOTFIT
      ErrorCode.SOURCETARGETZONELETSNOTFIT
      ErrorCode.INVALIDPRISMCONTROLS_INCORRECTSCOPEENTITY
      ErrorCode.INVALIDFIRSTASPECTRATIO
      ErrorCode.INVALIDLASTASPECTRATIO
      ErrorCode.INVALIDFIRSTHEIGHT
      ErrorCode.INVALIDLAYERS
      ErrorCode.INVALIDGROWTHRATE
      ErrorCode.COMPUTEVOLUMESFAILED
      ErrorCode.QUADRATICTETNOTSUPPORTEDINPARALLEL
      ErrorCode.QUADRATICTETNOTSUPPORTEDWITHPRISMS
      ErrorCode.EXTRACTVOLUMESFAILED
      ErrorCode.MERGEVOLUMESFAILED
      ErrorCode.DELETEVOLUMESFAILED
      ErrorCode.PERIODICSURFACESNOTSUPPORTEDFORPRISMS
      ErrorCode.INVALIDNEIGHBORVOLUMES
      ErrorCode.THINVOLUMEMESHFAILED
      ErrorCode.PRISMMESHFAILED
      ErrorCode.AUTOMESHINITFAILED
      ErrorCode.POLYMESHFAILED
      ErrorCode.PYRAMIDMESHFAILED
      ErrorCode.DELETEMESHFAILED
      ErrorCode.OUTOFMEMORY
      ErrorCode.INTERRUPTED
      ErrorCode.GETSTATISTICSFAILED
      ErrorCode.GETELEMENTCOUNTFAILED
      ErrorCode.PARTNOTFOUND
      ErrorCode.TOPODATANOTFOUND
      ErrorCode.SIZEFIELDNOTFOUND
      ErrorCode.ZONESARENOTOFSAMETYPE
      ErrorCode.PARTNOTMESHED
      ErrorCode.INVALIDINPUTPART
      ErrorCode.CADGEOMETRYNOTFOUND
      ErrorCode.VOLUMENOTFOUND
      ErrorCode.ZONENOTFOUND
      ErrorCode.ENTITIESSHOULDBEADDEDTOZONEUSINGPARTITBELONGS
      ErrorCode.PARTDOESNOTHAVETOPOLOGY
      ErrorCode.ZONESARENOTSUPPORTEDFORCELLZONELETS
      ErrorCode.SPHEREATINVALIDNORMALNODESFAILED
      ErrorCode.PROJECTONCADGEOMETRYFAILED
      ErrorCode.SEPARATIONRESULTSFAILED
      ErrorCode.ZONELETSARENOTOFSAMEDIMENSION
      ErrorCode.ADDTHICKNESSRESULTSFAILED
      ErrorCode.BOIRESULTSFAILED
      ErrorCode.CREATEBOI_INVALIDSCALE
      ErrorCode.CREATEBOI_INVALIDFLOWDIRECTION
      ErrorCode.CREATEBOI_IVALIDWRAPMESHSIZE
      ErrorCode.CREATEBOI_INVALIDWAKELEVELS
      ErrorCode.CREATEBOI_INVALIDTYPEFORWRAP
      ErrorCode.CREATEBOI_INVALIDSCOPE
      ErrorCode.CREATECONTACTPATCH_INVALIDOFFSETDISTANCE
      ErrorCode.CREATECONTACTPATCH_INVALIDTOLERANCEVALUE
      ErrorCode.CREATECONTACTPATCH_INVALIDCONTACTPATCHAXIS
      ErrorCode.CONTACTPATCHRESULTSFAILED
      ErrorCode.SIZEFIELDCOMPUTATIONFAILED
      ErrorCode.INVALIDSIZECONTROLS
      ErrorCode.REFRESHSIZEFIELDSFAILED
      ErrorCode.READMESHFAILED
      ErrorCode.WRITEMESHFAILED
      ErrorCode.CADIMPORTFAILED
      ErrorCode.READSIZEFIELDFAILED
      ErrorCode.READCDBFAILED
      ErrorCode.WRITECDBFAILED
      ErrorCode.PATHNOTFOUND
      ErrorCode.READKEYWORDFILEFAILED
      ErrorCode.WRITEKEYWORDFILEFAILED
      ErrorCode.QUADRATICMESH_WRITEMESHFAILED
      ErrorCode.INCLUDEKFILENOTFOUND
      ErrorCode.READSIZECONTROLFAILED
      ErrorCode.WRITESIZECONTROLFAILED
      ErrorCode.FILENOTFOUND
      ErrorCode.READPMDATFAILED
      ErrorCode.EXPORTFLUENTCASEFAILED
      ErrorCode.VOLUMEZONESNOTFOUNDTOEXPORTFLUENTCASE
      ErrorCode.IMPORTFLUENTMESHINGMSHFAILED
      ErrorCode.IMPORTFLUENTCASEFAILED
      ErrorCode.WRITEPMDATFAILED
      ErrorCode.EXPORTFLUENTMESHINGMSHFAILED
      ErrorCode.WRITESIZEFIELDFAILED
      ErrorCode.MESHNOTFOUNDTOEXPORTFLUENTMESHINGMESH
      ErrorCode.EXPORTSTLFAILEDWITHTOPOLOGY
      ErrorCode.EXPORTSTLFAILEDWITHQUADFACES
      ErrorCode.EXPORTSTLFAILEDWITHPOLYFACES
      ErrorCode.EXPORTSTLFAILEDWITHHIGHERORDERMESH
      ErrorCode.EXPORTSTLFAILEDWITHEMPTYPARTIDLIST
      ErrorCode.EXPORTSTLFAILEDWITHINCORRECTPARTID
      ErrorCode.MATCHEDMESHOPTIONINVALID
      ErrorCode.COLOCATEMATCHEDNODESFAILED
      ErrorCode.IMPRINTBOUNDARYNODESFAILED
      ErrorCode.IMPRINTBOUNDARYEDGESFAILED
      ErrorCode.SPLITINTERSECTINGBOUNDARYEDGESFAILED
      ErrorCode.MATCHINTERIORFAILED
      ErrorCode.TOLERANCEVALUEINVALID
      ErrorCode.SOURCEORTARGETNOTSPECIFIED
      ErrorCode.NOTSUPPORTEDFORTOPOLOGYPART
      ErrorCode.NOTSUPPORTEDFORHIGHERORDERMESHPART
      ErrorCode.NOTSUPPORTEDFORNONTRIFACEZONE
      ErrorCode.NOTSUPPORTEDFORNONQUADFACEZONE
      ErrorCode.MERGEPARTSFAILED
      ErrorCode.MERGEPARTSWANDWOTOPO
      ErrorCode.SETNAMEFAILED
      ErrorCode.CONTROLNOTFOUND
      ErrorCode.NOINPUT
      ErrorCode.DELETEPARTSFAILED
      ErrorCode.DELETECONTROLSFAILED
      ErrorCode.INPUTNOTCOMPLETE
      ErrorCode.INVALIDINPUTZONELETS
      ErrorCode.MERGEZONELETSFAILED
      ErrorCode.MERGESMALLZONELETSSUPPORTEDFORFACEZONELETS
      ErrorCode.INVALIDINPUTVOLUMES
      ErrorCode.MORPHER_COMPUTEBCS
      ErrorCode.MORPHER_MATCHMORPHINVALIDSOURCEINPUT
      ErrorCode.MORPHER_BCPAIRINPUTTYPEMISMATCH
      ErrorCode.INVALIDGLOBALMINMAX
      ErrorCode.INVALIDSIZECONTROLINPUTS
      ErrorCode.INVALIDSIZECONTROLSCOPE
      ErrorCode.INVALIDCURVATURESIZINGINPUT
      ErrorCode.INVALIDPROXIMITYSIZINGINPUT
      ErrorCode.INVALIDSCOPEENTITYTYPEINPUT
      ErrorCode.EXTRACTFEATURESBYANGLEFAILED
      ErrorCode.EXTRACTFEATURESBYEDGESFAILED
      ErrorCode.CREATEEDGEZONELETFAILED
      ErrorCode.EXTRACTFEATURESBYINTERSECTIONFAILED
      ErrorCode.VOLUMEMESH_MIDNODESNOTSUPPORTED
      ErrorCode.VOLUMEMESHNOTFOUND
      ErrorCode.SPLITANDCOLLAPSEFACEELEMENTSFAILED
      ErrorCode.IGA_NURBSOPFAILED
      ErrorCode.IGA_INCORRECTCONTROLPOINTSIZEWRTDEGREE
      ErrorCode.IGA_INCORRECTCONTROLPOINTSIZEWRTINPUT
      ErrorCode.IGA_NURBSFITTINGFAILED
      ErrorCode.IGA_NEGATIVEJACOBIAN
      ErrorCode.IGA_PERIODICKNOTVECTORCONVERSIONFAILED
      ErrorCode.IGA_HREFINEMENTFAILED
      ErrorCode.IGA_PREFINEMENTFAILED
      ErrorCode.IGA_NURBSSMOOTHFAILED
      ErrorCode.IGA_NODEINDEXINGFAILED
      ErrorCode.IGA_NOCELLZONELETS
      ErrorCode.IGA_INVALIDINPUTFILEFORSTRUCTUREDHEXMESHFITTING
      ErrorCode.IGA_INVALIDINPUTFILEFORGENUSZEROFITTING
      ErrorCode.IGA_NOFACEZONELETS
      ErrorCode.IGA_EDGEPATHCOMPUTATIONFAILED
      ErrorCode.IGA_INCORRECTDEGREE
      ErrorCode.IGA_QUADRATICMESHINPUT
      ErrorCode.IGA_UNIFORMTRIMMEDNURBSFAILED
      ErrorCode.IGA_QUADTOSPLINEBASISFAILED
      ErrorCode.PARTHASTOPOLOGY
      ErrorCode.SURFACESEARCHFAILED
      ErrorCode.SURFACESEARCHPARTWITHMESHNOTFOUND
      ErrorCode.INVALIDPLANEPOINTS
      ErrorCode.PLANECOLLINEARPOINTS
      ErrorCode.INVALIDREGISTERID
      ErrorCode.SURFACEFEATURETYPENOTSUPPORTED
      ErrorCode.VOLUMESEARCHPARTWITHMESHNOTFOUND
      ErrorCode.VOLUMESEARCHFAILED
      ErrorCode.INVALIDCELLQUALITYLIMIT
      ErrorCode.FILLHOLEFAILED
      ErrorCode.SUBTRACTZONELETSFAILED
      ErrorCode.CREATECAPONFACEZONELETSFAILED
      ErrorCode.UNITEZONELETSFAILED
      ErrorCode.REFINEATCONTACTSFAILED
      ErrorCode.RECOVERPERIODICSURFACESFAILED
      ErrorCode.RECOVERPERIODICSURFACESINVALIDSCOPE
      ErrorCode.CHECKPERIODICPAIRSFAILED
      ErrorCode.PERIODICSURFACESEDGESMISMATCH
      ErrorCode.TRANSFORMATIONFAILED
      ErrorCode.SCALINGFAILED
      ErrorCode.ALIGNMENTFAILED
      ErrorCode.INVALIDTRANSFORMATIONMATRIX
      ErrorCode.DELETEMESHFACESFAILED
      ErrorCode.DELETEMESHFACES_TOPOLOGYNOTSUPPORTED
      ErrorCode.DELETEMESHFACES_CELLFOUND
      ErrorCode.DELETEFRINGESANDOVERLAPSFAILED
      ErrorCode.DELETEZONELETSCONNECTEDTOCELLS
      ErrorCode.DELETEZONELETSFAILED
      ErrorCode.MATERIALPOINTWITHSAMENAMEEXISTS
      ErrorCode.MATERIALPOINTWITHGIVENNAMEDOESNTEXIST
      ErrorCode.MATERIALPOINTWITHGIVENIDDOESNTEXIST
      ErrorCode.WRAPPERGLOBALSETTINGSNOTSET
      ErrorCode.WRAPPERRESOLVEINTERSECTIONFAILED
      ErrorCode.WRAPPERCONNECTFAILED
      ErrorCode.WRAPPERCOULDNOTEXTRACTINTERFACE
      ErrorCode.WRAPPERLEAKPREVENTIONFAILED
      ErrorCode.WRAPPERUNSUPPORTEDWRAPREGION
      ErrorCode.WRAPPERCONTROL_NOLIVEMATERIALPOINTSPROVIDED
      ErrorCode.WRAPPERSURFACEHASHOLES
      ErrorCode.WRAPPEROCTREEREGIONINGFAILED
      ErrorCode.WRAPPERPROJECTIONFAILED
      ErrorCode.WRAPPERCONTROL_MATERIALPOINTWITHGIVENNAMEDOESNTEXIST
      ErrorCode.WRAPPERCONTROL_LIVEMATERIALPOINTDOESNTEXIST
      ErrorCode.WRAPPERSIZINGMETHODNOTSUPPORTED
      ErrorCode.WRAPPERIMPROVEFAILED
      ErrorCode.WRAPPERSIZEFIELDSNOTDEFINED
      ErrorCode.WRAPPERCONTROL_INVALIDGEOMETRYSCOPE
      ErrorCode.WRAPPERCONTROL_INVALIDCONTACTPREVENTIONCONTROLID
      ErrorCode.WRAPPERCONTROL_INVALIDCONTACTPREVENTIONCONTROLINPUTS
      ErrorCode.WRAPPERCONTROL_INVALIDLEAKPREVENTIONID
      ErrorCode.WRAPPERCONTROL_INVALIDLEAKPREVENTIONCONTROLINPUTS
      ErrorCode.WRAPPERCONTROL_INVALIDFEATURERECOVERYCONTROLID
      ErrorCode.WRAPPERCONTROL_LEAKPREVENTIONMPTCANNOTBELIVE
      ErrorCode.INVALIDWRAPPERCONTROL
      ErrorCode.WRAPPERCLOSEGAPS_INVALIDGAPSIZE
      ErrorCode.WRAPPERCLOSEGAPS_INVALIDSCOPE
      ErrorCode.WRAPPERCLOSEGAPSFAILED
      ErrorCode.CELLSEPARATIONFAILED
      ErrorCode.NOCELLSSEPARATED
      ErrorCode.SIZEFIELDTYPENOTSUPPORTED
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORPMDAT
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORFLUENTMESHINGMESH
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORFLUENTCASE
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORKEYWORDFILE
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORFLUENTSIZEFIELD
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORSIZEFIELD
      ErrorCode.UNSUPPORTEDFILEEXTENSIONFORMAPDLCDB
      ErrorCode.PLUGINLOADFAILURE
      ErrorCode.TARGETZONELETS_SELFINTERSECTING
      ErrorCode.TARGETZONELETS_NOTWATERTIGHT
      ErrorCode.TOOLZONELETS_SELFINTERSECTING
      ErrorCode.TOOLZONELETS_NOTWATERTIGHT
      ErrorCode.STACKER_INVALIDINPUTVOLUMES
      ErrorCode.STACKER_INVALIDPARAMS
      ErrorCode.STACKER_FACESEPARATIONFAILED
      ErrorCode.STACKER_FAILED
      ErrorCode.STACKER_NOFACEFOUNDINVOLUMES
      ErrorCode.STACKER_MESHEDFACESFOUND
      ErrorCode.STACKER_INVALIDBASEFACEINPUT
      ErrorCode.STACKER_NONSTACKABLEVOLUMESFOUND
      ErrorCode.STACKER_INCORRECTBODYDEFINITION
      ErrorCode.STACKER_BASEFACEUNMESHED
      ErrorCode.INVALIDTHINVOLUMECONTROLS
      ErrorCode.THINVOLUMECONTROLINVALIDSOURCESCOPE
      ErrorCode.THINVOLUMECONTROLINVALIDTARGETSCOPE
      ErrorCode.THINVOLUMECONTROLINVALIDSCOPE
      ErrorCode.THINVOLUMECONTROLINVALIDSOURCESCOPEENTITY
      ErrorCode.THINVOLUMECONTROLINVALIDTARGETSCOPEENTITY
      ErrorCode.THINVOLUMECONTROLINVALIDNUMBEROFLAYER
      ErrorCode.THINVOLUMECONTROLTOPOLOGYNOTSUPPORTED
      ErrorCode.THINVOLUMECONTROLINVALIDVOLUMESCOPE
      ErrorCode.THINVOLUMECONTROLINVALIDCONTROL
      ErrorCode.MICROSTRUCTUREINVALIDELEMENTTYPE
   
   

.. vale on